WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53431
[Qt] WebKit fails to compile for Qt when WebGL enabled
https://bugs.webkit.org/show_bug.cgi?id=53431
Summary
[Qt] WebKit fails to compile for Qt when WebGL enabled
Andrew Wason
Reported
2011-01-31 09:39:39 PST
"build-webkit --qt --3d-canvas" fails to compile. The Qt WebGL implementation is out of sync with changes made to to the rest of the implementation. The patch from
bug 53041
is needed to enable --3d-canvas. Will attach a patch shortly.
Attachments
update Qt WebGL implementation so it builds and runs
(12.08 KB, patch)
2011-01-31 10:15 PST
,
Andrew Wason
no flags
Details
Formatted Diff
Diff
update Qt WebGL implementation so it builds and runs
(12.08 KB, patch)
2011-02-01 11:14 PST
,
Andrew Wason
no flags
Details
Formatted Diff
Diff
update Qt WebGL implementation so it builds and runs
(13.52 KB, patch)
2011-02-05 14:23 PST
,
Andrew Wason
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Andrew Wason
Comment 1
2011-01-31 10:15:44 PST
Created
attachment 80653
[details]
update Qt WebGL implementation so it builds and runs
Benjamin Poulain
Comment 2
2011-01-31 10:19:29 PST
Does that work when compiled? I don't like the idea of adding stubs just to discover later the thing is not working when running the tests.
Andrew Wason
Comment 3
2011-01-31 10:37:52 PST
(In reply to
comment #2
)
> Does that work when compiled? I don't like the idea of adding stubs just to discover > later the thing is not working when running the tests.
Yes, it works when compiled if "Toggle use of QGraphicsView" is unchecked in QtTestBrowser, or if it is checked then "Toggle Accelerated Compositing" must be unchecked - I think this was a requirement before this patch too. It looks like the stubbed out DrawingBuffer is only used if ACCELERATED_2D_CANVAS is enabled. The only place I can find a call to createDrawingBuffer() is in Source/WebCore/html/canvas/CanvasRenderingContext2D.cpp:CanvasRenderingContext2D::CanvasRenderingContext2D() and it is wrapped in ACCELERATED_2D_CANVAS ifdef.
WebKit Review Bot
Comment 4
2011-02-01 11:08:51 PST
Attachment 80653
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/platform/graphics/gpu/qt/DrawingBufferQt.cpp:52: Use 0 instead of NULL. [readability/null] [5] Source/WebCore/platform/graphics/gpu/qt/DrawingBufferQt.cpp:58: Use 0 instead of NULL. [readability/null] [5] Total errors found: 2 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andrew Wason
Comment 5
2011-02-01 11:14:43 PST
Created
attachment 80791
[details]
update Qt WebGL implementation so it builds and runs change NULL to 0 to pass style-queue
Andrew Wason
Comment 6
2011-02-05 14:23:50 PST
Created
attachment 81372
[details]
update Qt WebGL implementation so it builds and runs Updated patch with more complete DrawingBufferQt.cpp implementation based on DrawingBufferMac.mm
Benjamin Poulain
Comment 7
2011-02-09 03:10:22 PST
***
Bug 54006
has been marked as a duplicate of this bug. ***
Dawit A.
Comment 8
2011-02-09 12:43:33 PST
A site that can be used for testing:
https://cvs.khronos.org/svn/repos/registry/trunk/public/webgl/sdk/tests/webgl-conformance-tests.html
Andreas Kling
Comment 9
2011-02-13 10:47:02 PST
***
Bug 47566
has been marked as a duplicate of this bug. ***
Kenneth Russell
Comment 10
2011-02-14 11:12:18 PST
Comment on
attachment 81372
[details]
update Qt WebGL implementation so it builds and runs Looks fine to me as long as it's been built and tested.
WebKit Commit Bot
Comment 11
2011-02-14 11:46:39 PST
The commit-queue encountered the following flaky tests while processing
attachment 81372
[details]
: http/tests/webarchive/test-preload-resources.html
bug 54404
(author:
ddkilzer@webkit.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 12
2011-02-14 11:48:28 PST
Comment on
attachment 81372
[details]
update Qt WebGL implementation so it builds and runs Clearing flags on attachment: 81372 Committed
r78495
: <
http://trac.webkit.org/changeset/78495
>
WebKit Commit Bot
Comment 13
2011-02-14 11:48:35 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug