Source/WebCore/html/canvas/WebGLRenderingContext.cpp
@@ -66,6 +66,10 @@
 #include <wtf/PassOwnArrayPtr.h>
 #include <wtf/text/StringBuilder.h>
 
+#if PLATFORM(QT)
+#undef emit
+#endif
+
 namespace WebCore {
 
 const double secondsBetweenRestoreAttempts = 1.0;
